# Kairoskopion

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
architecture/: VENUE_EVIDENCE_STACK_CANONICAL_ARCHITECTURE.md
benchmarks/: README.md
docs/: AGENTIC_CONTOUR_QUALITY_REVIEW_V01.md  AGENTIC_CONTOUR_V0_ARCHITECTURE.md  AGENTIC_CONTOUR_V0_RELEASE_AUDIT.md  AGENTIC_CONTOUR_V0_REPORT.md  ALPHA_RELEASE_NOTES.md  ARTICLE_PUBLICATION_POSITION_MODEL.md  AUTH_AND_PROXY_API_LANDSCAPE.md  BACKLOG.md  CORPUS_PROFILER.md  DECISIONS.md  DEPTH_POLICY.md  EVIDENCE_CONFLICT_RECONCILIATION_V0.md  FIELD_POSITION_MODEL.md  GENERALIZED_VENUE_FIT_INVARIANTS.md  GPT16_ALIGNMENT_BACKLOG_PATCH.md  GPT16_ALIGNMENT_MATRIX.md  GPT55_EXTRACTION_BENCHMARK_PROMPT.md  KAIRON_IMPLEMENTATION_PLAN.md  KAIRON_LITOPS_WHITECROW_COMPATIBILITY.md  KAIRON_ORIGIN.md  KAIRON_TECHNICAL_SPEC_FOR_CLAUDE_v0_1.md  KAIROSKOPION_STATE_AUDIT_2026_06_14.md  KAIROSKOPION_STATE_AUDIT_ADDENDUM_2026_06_14.md  LLM_PROVIDER_REALITY_302AI.md  MILESTONES.md  OPERATOR_MANUAL.md  PROJECT_STATUS.md  PUBLICATION_INTEGRABILITY_MODEL_v1.md  REAL_SOURCE_ACQUISITION_V0.md  REAL_SOURCE_ACQUISITION_V0_IMPLEMENTATION_MAP.md  REAL_VENUE_POOL_DISCOVERY_V0.md  REAL_VENUE_POOL_DISCOVERY_V0_IMPLEMENTATION_MAP.md  ROADMAP.md  SOURCE_ADAPTERS_OFFLINE_FIXTURES.md  SOURCE_ADAPTER_AUTHORITY_CONTRACT.md  SOURCE_AUTHORITY_MODEL_V0.md  SPEC_COVERAGE_MATRIX.md  STAGING_DEPLOYMENT_KAIROSKOP_2026_06_13.md  STAGING_DEPLOYMENT_PLAN.md  TRIAL_LOGOS_EVIDENCE_RERUN_REPORT.md  (+13 more)
examples/: README.md  (+4 more)
(+791 files in other folders)
