[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kairoskopion"
version = "0.1.0"
description = "Evidence-first publication-positioning system"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
extract = [
    "pypdf>=4.0",
    "python-docx>=1.0",
]
api = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "pypdf>=4.0",
    "python-docx>=1.0",
    "httpx>=0.27",
]

[project.scripts]
kairoskopion = "kairoskopion.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "network: tests that require live network access (deselect with '-m not network')",
]
addopts = "-m 'not network'"
